--- a/assignment/styles.css
+++ b/assignment/styles.css
@@ -2,14 +2,30 @@ header {
     background-color: darkblue;
     color: lightgreen;
     text-align: center;
+    text-decoration-line: underline;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
     background-color: skyblue;
+    border-radius: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     background-image: url("record.png");
     margin: 0;
     padding: 1em;
+}
+
+.store {
+    text-decoration: wavy;
+}
+
+.trademark {
+    background-color: blueviolet;
+}
+
+ul {
+    background-color: blueviolet;
 }
